test/expressions/diten/uintBinaryOverflow.good
error: uintBinaryOverflow.chpl:1: Integer literal overflow: '0b10000000000000000000000000000000000000000000000000000000000000000' is too big for type uint64
